fix(style): make color in dark mode less dazzling
...again

--- a/assets/scss/themes/_dark.scss
+++ b/assets/scss/themes/_dark.scss
@@ -7,5 +7,5 @@
     @include defineColorHSL(--color-contrast-low, 235, 7%, 30%);
     @include defineColorHSL(--color-contrast-medium, 240, 2%, 58%);
     @include defineColorHSL(--color-contrast-high, 75, 6%, 87%);
-    @include defineColorHSL(--color-contrast-higher, 60, 30%, 96%);
+    @include defineColorHSL(--color-contrast-higher, 60, 15%, 90%);
 }
